<resources>
    <string name="app_name">Budget Planning</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Budget Planning</string>
    <string name="second_fragment_label">Add transaction</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="balance">Balance</string>
    <string name="income">Incomes</string>
    <string name="outlay">Outlay</string>
    <string name="money" translatable="false">%1$s%2$s</string>
    <string name="dbname" translatable="false">budgplan</string>
    <string name="change_sum">Change sum</string>
    <string name="change_sum_comment">Comment (i.e. where you spent the money)</string>
    <string name="change_sum_date">Transaction date and time</string>
    <string name="now">Now</string>
    <string name="add">Add</string>
    <string-array name="transaction_types">
        <item>Spent</item>
        <item>Got</item>
    </string-array>
    <string name="mask_transaction_positive" translatable="false">+[99990].[00]</string>
    <string name="mask_transaction_negative" translatable="false">-[99990].[00]</string>
    <string name="show_for_period">Show data for period</string>
    <string name="statistics">Statistics</string>
    <string name="day">Day</string>
    <string name="three_days">3 Days</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="three_months">3 Months</string>
    <string name="half_year">Half a year</string>
    <string name="year">Year</string>
    <string name="change_balance">Change balance</string>
    <string name="set">Set</string>
    <string name="skip">Skip</string>
    <string name="balance_history">Balance changes history</string>
    <string-array name="signs">
        <item>⠀+⠀</item>
        <item>⠀-⠀</item>
    </string-array>
    <string name="new_balance">Enter new balance</string>


    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="change_sum_not_empty">Transaction sum shouldn\'t be empty!</string>
    <string name="transaction_add_success">Transaction successfully added!</string>

    <string-array name="statistics_modes">
        <item>Income/Outlay</item>
        <item>Balance changes</item>
    </string-array>

    <!-- Preference Titles -->
    <string name="localization_header">Local Preferences</string>

    <!-- Local Preferences -->
    <string name="currency_sym_title">Currency Symbol</string>
<!--    <string name="language_title">App Language</string>-->

    <string name="settings_title">Settings</string>
    <string name="line_graph_desc">Balance states as of period end</string>
    <string name="balance_history_title">Balance Changes</string>
    <string name="button_more_description">More</string>


</resources>