<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/day"
            android:orderInCategory="100"
            android:title="@string/day"/>
        <item
            android:id="@+id/three_days"
            android:orderInCategory="100"
            android:title="@string/three_days"/>
        <item
            android:id="@+id/week"
            android:orderInCategory="100"
            android:title="@string/week"/>
        <item
            android:id="@+id/month"
            android:orderInCategory="100"
            android:title="@string/month"/>
        <item
            android:id="@+id/three_months"
            android:orderInCategory="100"
            android:title="@string/three_months"/>
        <item
            android:id="@+id/half_year"
            android:orderInCategory="100"
            android:title="@string/half_year"/>
        <item
            android:id="@+id/year"
            android:orderInCategory="100"
            android:title="@string/year"/>
    </group>
</menu>