<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.budgetplanning.MainActivity">
    <group android:id="@+id/settings_group">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:icon="@drawable/settings_icon"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/time_select_group">
        <item
            android:id="@+id/action_show_for_period"
            android:icon="@drawable/clock_icon"
            android:orderInCategory="99"
            android:src="@drawable/clock_icon"
            android:title="@string/show_for_period"
            app:showAsAction="ifRoom">
            <menu>
                <group>
                    <item
                        android:id="@+id/select_day"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/day" />
                    <item
                        android:id="@+id/select_three_days"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/three_days" />
                    <item
                        android:id="@+id/select_week"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/week" />
                    <item
                        android:id="@+id/select_month"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/month" />
                    <item
                        android:id="@+id/select_three_months"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/three_months" />
                    <item
                        android:id="@+id/select_half_year"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/half_year" />
                    <item
                        android:id="@+id/select_year"
                        android:checkable="true"
                        android:orderInCategory="100"
                        android:title="@string/year" />
                </group>
            </menu>
        </item>
    </group>
    <group android:id="@+id/navigation_group">
        <item
            android:id="@+id/action_statistics"
            android:orderInCategory="200"
            android:title="@string/statistics"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_balance_change_history"
            android:orderInCategory="300"
            android:title="@string/balance_history"
            app:showAsAction="never" />
    </group>
</menu>