<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.budgetplanning.fragments.first.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_statisticsFragment"
            app:destination="@id/StatisticsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_balanceHistoryFragment"
            app:destination="@id/balanceHistoryFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_settingsFragment2"
            app:destination="@id/settingsFragment2" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.budgetplanning.fragments.second.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/StatisticsFragment"
        android:name="com.example.budgetplanning.fragments.statistics.StatisticsFragment"
        android:label="Statistics"
        tools:layout="@layout/fragment_statistics" >
        <action
            android:id="@+id/action_statisticsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/balanceHistoryFragment"
        android:name="com.example.budgetplanning.fragments.balance_history.BalanceHistoryFragment"
        android:label="@string/balance_history_title"
        tools:layout="@layout/fragment_balance_history" >
        <action
            android:id="@+id/action_balanceHistoryFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment2"
        android:name="com.example.budgetplanning.fragments.settings_fragment.SettingsFragment"
        android:label="@string/settings_title" >
        <action
            android:id="@+id/action_settingsFragment2_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>